--- a/apple/index.html
+++ b/apple/index.html
@@ -54,12 +54,12 @@
           <dt>iOS越狱</dt>
           
 		  <dd>1、有Checkra1n 与 unc0ver 越狱 支持iOS 12 - 14</dd>
-<dd>2、unc0ver在线安装即将开启！</dd>
+<dd>2、unc0ver支持在线安装！</dd>
 <dd>3、越狱有风险，请谨慎操作！</dd>
          
         </dl>
 		
-		<div>unc0ver 未签名版本下载： <a href="./jb120.ipa"  target="_blank">点此下载</a> </div>
+		<div>unc0ver 下载：（如无法安装请等待签名） <a href="https://hhp.lanzouy.com/iDNGL002iiji"  target="_blank">点此下载</a> </div>
 		<div>Cydia 1.1.36 已签名(已破解无需越狱)： <a href="./cydia_1.1.36_iphoneos-arm_signed.ipa"  target="_blank">点此下载</a> </div>
 		
 		
