--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 
         <div class="service">
           <i class="icon fas fa-pager"></i>
-          <h4>Build Websites</h4>
-          <p>会弄一些简单的网站</p>
+          <h4>苹果iOS越狱专区</h4>
+          <p>现已开放！！！</p>
+		<div> <a href="./apple/"  target="_blank">点此访问</a> </div>
         </div>
 
         <div class="service">
