--- a/apple/index.html
+++ b/apple/index.html
@@ -61,7 +61,7 @@
 		
 		<div>unc0ver 下载：（如无法安装请等待签名） <a href="https://hhp.lanzouy.com/iDNGL002iiji"  target="_blank">点此下载</a> </div>
 		<div>Cydia 1.1.36 已签名(已破解无需越狱)： <a href="./cydia_1.1.36_iphoneos-arm_signed.ipa"  target="_blank">点此下载</a> </div>
-	      <div>Cydia 1.1.36 已签名(已破解无需越狱)直装版（请使用Safari打开！!）： <a href="itms-services://?action=download-manifest&url=‘https://mcdawanjia.top/apple/wyy271.plist’"  target="_blank">点此下载</a> </div>
+	      <div>Cydia 1.1.36 已签名(已破解无需越狱)直装版（请使用Safari打开！!）： <a href="itms-services://?action=download-manifest&url=https://mcdawanjia.top/apple/wyy271.plist"  target="_blank">点此下载</a> </div>
 		
 		
 		
