--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="buttons">
           <a href="#">联系我</a>
-          <a href="#">Download CV</a>
+          <a href="http://mcdawanjia.ysepan.com">MC大顽家的下载空间</a>
         </div>
       </div>
     </div>
