--- a/dns/index.html
+++ b/dns/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MC大顽家の个人网站</title>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <title>万联电信DNS</title>
+  <link href="https://fonts.googleapis.cn/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -28,8 +28,6 @@
         <a href="#home">主页</a>
         <a href="#about">关于</a>
         <a href="#services">提供的服务</a>
-        <a href="#education">EDU</a>
-        <a href="#works">学习常用</a>
         <a href="#contact">联系</a>
       </div>
     </div>
@@ -39,7 +37,7 @@
   <section id="home">
     <div class="inner-width">
       <div class="content">
-        <h1>Hi I'm </h1>
+        <h1>万联电信提供的DNS： </h1>
         <div class="sm">
           <a href="https://github.com/MCdawanjia" class="fab fa-github"></a>
         <a href="#" class="fab fa-qq"></a>
@@ -48,8 +46,8 @@
         <a href="https://space.bilibili.com/626599529" class="fab fa-youtube"></a>
         </div>
         <div class="buttons">
-          <a href="#">联系我</a>
-          <a href="http://mcdawanjia.ysepan.com">MC大顽家的下载空间</a>
+          <a href="#about">如何使用？</a>
+          <a href="#services">提供的服务</a>
         </div>
       </div>
     </div>
@@ -60,16 +58,16 @@
     <div class="inner-width">
       <h1 class="section-title">关于</h1>
       <div class="about-content">
-        <img src="images/pic.png" alt="" class="about-pic">
+        <img src="https://s.mcdawanjia.eu.org/wllogo.gif" alt="" class="about-pic">
         <div class="about-text">
-          <h2>Hi! I'm Uploader</h2>
+          <h2>万联电信DNS</h2>
           <h3>
-            <span>Low Developer</span>
-            <span>Designer</span>
-            <span>Youtuber</span>
+            <span>快速</span>
+            <span>安全</span>
+            <span>好用</span>
           </h3>
           <p>
-		  你好！我是MC大顽家！这是我的测试网站，请尽请期待完整版本！
+		  欢迎您使用万联电信DNS，我们在中国与中国香港特别行政区均有部署服务器，支持多种请求方式。推荐使用DoT/DoQ(DNS over QUIC)方式进行连接以保证返回结果的正确。请将DoT/DoQ地址设置为dns.mcdawanjia.top 如您需使用DoH可以将地址设置为https://dns.mcdawanjia.top:58443/dns-query 标准UDP/TCP解析可以设置为：61.171.114.50(中国大陆或全球备用)或163.197.220.248、2001:470:18:68a::2(全球除中国大陆或中国大陆备用)(不推荐使用标准UDP/TCP解析，您的返回结果可能会被ISP或政府网络审查机关拦截并修改！)
 		  </p>
         </div>
       </div>
@@ -77,48 +75,48 @@
       <div class="skills">
         <div class="skill">
           <div class="skill-info">
-            <span>HTML</span>
-            <span>90%</span>
+            <span>iOS设备</span>
+            <span>50%</span>
           </div>
           <div class="skill-bar html"></div>
         </div>
 
         <div class="skill">
           <div class="skill-info">
-            <span>CSS</span>
-            <span>20%</span>
+            <span>Android新版本</span>
+            <span>90%</span>
           </div>
           <div class="skill-bar css"></div>
         </div>
 
         <div class="skill">
           <div class="skill-info">
-            <span>Javascript</span>
-            <span>10%</span>
+            <span>Android旧版本</span>
+            <span>50%</span>
           </div>
           <div class="skill-bar js"></div>
         </div>
 
         <div class="skill">
           <div class="skill-info">
-            <span>PHP</span>
-            <span>40%</span>
+            <span>Windows</span>
+            <span>50%</span>
           </div>
           <div class="skill-bar php"></div>
         </div>
 
         <div class="skill">
           <div class="skill-info">
-            <span>MySQL</span>
-            <span>20%</span>
+            <span>macOS</span>
+            <span>50%</span>
           </div>
           <div class="skill-bar mysql"></div>
         </div>
 
         <div class="skill">
           <div class="skill-info">
-            <span>C++</span>
-            <span>60%</span>
+            <span>Nintendo Console</span>
+            <span>50%</span>
           </div>
           <div class="skill-bar cs"></div>
         </div>
@@ -129,99 +127,49 @@
   <!-- Services -->
   <section id="services" class="dark">
     <div class="inner-width">
-      <h1 class="section-title">服务</h1>
+      <h1 class="section-title">提供的服务</h1>
       <div class="services">
         <div class="service">
           <i class="icon fas fa-paint-brush"></i>
-          <h4>EasiNote Fix Tools</h4>
-          <p>纯手工开发，可以修复希沃白板的一些问题，Download Link: http://mcdawanjia.top/enfix</p>
+          <h4>无污染域名解析</h4>
+          <p>我们提供未被污染的域名解析，解析结果均来自各大DNS服务商</p>
         </div>
 
         <div class="service">
           <i class="icon fas fa-pager"></i>
-          <h4>苹果iOS越狱专区</h4>
-          <p>现已开放！！！</p>
-		<div> <a href="./apple/"  target="_blank">点此访问</a> </div>
+          <h4>全球可用</h4>
+          <p>我们在全球部署了多台服务器以确保全球用户的正常访问，并且支持IPv6</p>
+		
         </div>
 
         <div class="service">
           <i class="icon fas fa-database"></i>
-          <h4>捉弄MYSQL</h4>
-          <p>这个我不太会，可以找Bilibili“天空-星”</p>
+          <h4>速度快</h4>
+          <p>为了保障全球用户连接速度，我们将服务器设置在了中国大陆、中国香港、俄罗斯、美国（俄罗斯与美国服务器正在搭建中）</p>
         </div>
 
         <div class="service">
           <i class="icon fab fa-android"></i>
-          <h4>Android Apps</h4>
-          <p>贴皮应用，更改软件信息、替换系统文件</p>
+          <h4>连接方式多</h4>
+          <p>我们支持DoT(DNS over TLS)、DoH(DNS over HTTPS)、DoQ(DNS over QUIC)与标准UDP/TCP请求</p>
         </div>
 
         <div class="service">
           <i class="icon fas fa-credit-card"></i>
-          <h4>UI设计</h4>
-          <p>不太会</p>
+          <h4>任天堂服务加速</h4>
+          <p>在中国大陆，由于政策原因导致各大CDN厂商均无法在中国大陆直接运营他们的服务器，中国大陆用户使用任天堂等服务器均会连接至海外服务器导致延迟大、丢包以及服务器被屏蔽等问题，针对此问题我们通过众多手段成功解决此问题(加速范围：连接测试、Nintendo e商店、下载服务、部分任天堂账号登陆验证、部分游戏内的网络)</p>
         </div>
 
         <div class="service">
           <i class="icon fas fa-keyboard"></i>
-          <h4>万联电信DNS</h4>
-          <p>快速 · 好用 · 安全 的公共DNS服务，并且针对中华人民共和国地区的任天堂网络进行了特殊优化，保障任天堂的在华体验！</p> <div> <a href="./dns/"  target="_blank">点此了解</a> </div>
+          <h4>优质线路</h4>
+          <p>我们的服务器使用了中国宽带互联网骨干网、中国宽带互联网CN2、CTGNet等线路保障用户服务质量（以中国大陆为例，用户在中国大陆连接除美国与中国大陆外的任意一服务器均为CN2线路(美国为China169，中国大陆为本土网络直连)）</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Education -->
-  <section id="education">
-    <div class="inner-width">
-      <h1 class="section-title">EDU</h1>
-      <div class="time-line">
-        <div class="block">
-          <h4>Primary School</h4>
-          <h3>???</h3>
-          <p>毕业于德阳市实验小学</p>
-        </div>
 
-        <div class="block">
-          <h4>Middle School</h4>
-          <h3>Software Designer</h3>
-          <p>毕业于 Deyang High School</p>
-        </div>
-
-        <div class="block">
-          <h4>High School</h4>
-          <h3>Unknown</h3>
-          <p>就读于 LuoJiang High School</p>
-        </div>
-
-        <div class="block">
-          <h4>University</h4>
-          <h3>Unknown</h3>
-          <p>Sorry,we can`t get any information from MCdawanjia`s server. Error Code:502 Bad Gateway</p>
-        </div>
-
-      
-      </div>
-    </div>
-  </section>
-
-  <!-- Works -->
-  <section id="works" class="dark">
-    <div class="inner-width">
-      <h1 class="section-title">学习常用</h1>
-      <div class="works">
-        <a href="images/works/1.jpg" class="work">
-          <img src="images/works/1.jpg" alt="">
-          <div class="info">
-            <h3>学习1</h3>
-            <div class="cat">Apple Music,iPhone和耳机</div>
-          </div>
-        </a>
-
-
-      </div>
-    </div>
-  </section>
 
   <!-- Contact -->
   <section id="contact">
@@ -258,7 +206,7 @@
   <footer>
     <div class="inner-width">
       <div class="copyright">
-        &copy; 2022 | Build on server By <a href="#">WanLian Telecom Group · 使用 中国电信 优质回国线路</a>
+        &copy; 2022 | Build on server By <a href="#">WanLian Telecom Technology · 使用 中国电信 优质回国线路</a>
       </div>
       <div class="sm">
         <a href="#" class="fab fa-github"></a>
