--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
   <!-- Footer -->
   <footer>
     <div class="inner-width">
+	    <div class="g-recaptcha" data-sitekey="6LfkGYknAAAAAICNW4DuwtsFbcdTpRQpA9IeEdCo"></div>
+	    <script src='https://recaptcha.google.cn/recaptcha/api.js?hl=zh-CN'></script>
       <div class="copyright">
         &copy; 2022 | Build on server By <a href="#">WanLian Telecom Group · 使用 中国电信 优质回国线路</a>
       </div>
