--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/scripts.js"></script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2937911769536898"
      crossorigin="anonymous"></script>
-	<script src='https://recaptcha.google.cn/recaptcha/api.js?hl=zh-CN'></script>
+	
 </head>
 <body>
   <!-- Navbar -->
@@ -258,8 +258,8 @@
   <!-- Footer -->
   <footer>
     <div class="inner-width">
-	    <div class="g-recaptcha" data-sitekey="6LfkGYknAAAAAICNW4DuwtsFbcdTpRQpA9IeEdCo"></div>
-	    
+	   
+	    <script src="https://www.google.com/recaptcha/api.js?render=6LfkGYknAAAAAICNW4DuwtsFbcdTpRQpA9IeEdCo"></script>
       <div class="copyright">
         &copy; 2022 | Build on server By <a href="#">WanLian Telecom Group · 使用 中国电信 优质回国线路</a>
       </div>
