--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <footer>
     <div class="inner-width">
 	   
-	    <script src="https://www.google.com/recaptcha/api.js?render=6LfkGYknAAAAAICNW4DuwtsFbcdTpRQpA9IeEdCo"></script>
+	    <script src="https://recaptcha.google.cn/recaptcha/api.js?render=6LfkGYknAAAAAICNW4DuwtsFbcdTpRQpA9IeEdCo"></script>
       <div class="copyright">
         &copy; 2022 | Build on server By <a href="#">WanLian Telecom Group · 使用 中国电信 优质回国线路</a>
       </div>
